Name:          distributed-process-simplelocalnet
Version:       0.2.4
Cabal-Version: >=1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     Well-Typed LLP
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    Tim Watson <watson.timothy@gmail.com>
Stability:     experimental
Homepage:      http://haskell-distributed.github.com
Bug-Reports:   https://cloud-haskell.atlassian.net/browse/DPSLN
Synopsis:      Simple zero-configuration backend for Cloud Haskell
Description:   Simple backend based on the TCP transport which offers node
               discovery based on UDP multicast. This is a zero-configuration
               backend designed to get you going with Cloud Haskell quickly
               without imposing any structure on your application.
Tested-With:   GHC==7.2.2 GHC==7.4.1 GHC==7.4.2
Category:      Control
extra-source-files: ChangeLog

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/distributed-process-simplelocalnet

Flag build-example
  Default: False
  Description: Build a simple example application

Library
  Build-Depends:     base >= 4.15 && < 5,
                     bytestring >= 0.9 && < 0.11,
                     network >= 3.1 && < 3.2,
                     network-multicast >= 0.3 && < 0.4,
                     data-accessor >= 0.2 && < 0.3,
                     binary >= 0.8 && < 0.9,
                     containers >= 0.6 && < 0.7,
                     exceptions >= 0.10 && < 0.11,
                     transformers >= 0.5 && < 0.6,
                     network-transport >= 0.5 && < 0.6,
                     network-transport-tcp >= 0.8 && < 0.9,
                     distributed-process >= 0.7 && < 0.8
  Exposed-modules:   Control.Distributed.Process.Backend.SimpleLocalnet,
                     Control.Distributed.Process.Backend.SimpleLocalnet.Internal.Multicast
  Extensions:        RankNTypes,
                     DeriveDataTypeable,
                     CPP
  ghc-options:       -Wall
  HS-Source-Dirs:    src

Executable TestSimpleLocalnet
  Main-Is:           TestSimpleLocalnet.hs
  Other-Modules:
    Control.Distributed.Process.Backend.SimpleLocalnet
    Control.Distributed.Process.Backend.SimpleLocalnet.Internal.Multicast
  If flag(build-example)
    Build-Depends:  base >= 4.15 && < 5,
                    bytestring >= 0.9 && < 0.11,
                    network >= 3.1 && < 3.2,
                    network-multicast >= 0.3 && < 0.4,
                    data-accessor >= 0.2 && < 0.3,
                    exceptions >= 0.10 && < 0.11,
                    binary >= 0.8 && < 0.9,
                    containers >= 0.6 && < 0.7,
                    transformers >= 0.5 && < 0.6,
                    network-transport >= 0.5 && < 0.6,
                    network-transport-tcp >= 0.8 && < 0.9,
                    distributed-process >= 0.7 && < 0.8
  Else
    Buildable: False
  Extensions:        RankNTypes,
                     DeriveDataTypeable,
                     CPP
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind 
  HS-Source-Dirs:    tests src
